Colocando explicação nas vagas

--- a/Projeto/HTML/manejar_carros(vagas).html
+++ b/Projeto/HTML/manejar_carros(vagas).html
@@ -34,6 +34,7 @@
                     <div class="vagaVermelha"></div>
                 </div>
             </div>
+            <h2 id='explicacao'>Clique na vaga para mudar a condição (ocupada/livre)</h2>
             <h2 id="salvar">Salvar!</h2>
         </main>
     </body>
