--- a/Projeto/HTML/manejar_horarios(horarios).html
+++ b/Projeto/HTML/manejar_horarios(horarios).html
@@ -23,7 +23,7 @@
         <main>
             <main>
                 <p class='cliente' >
-                    <input type="text">
+                    <input type="text" class= 'fundo' placeholder="digite a placa">
                 </p>
                 <div class="max-width">
                     <button onclick="start();" class="br-green">Iniciar</button>
@@ -32,7 +32,7 @@
                     <h1 id="counter">00:00:00</h1>
                 </div>
                 <p class='cliente' >
-                    <input type="text">
+                    <input type="text" class = 'fundo' placeholder="digite a placa" >
                 </p>
                 <div class="max-width">
                     <button onclick="start2();" class="br-green">Iniciar</button>
@@ -41,7 +41,7 @@
                     <h1 id="counter2">00:00:00</h1>
                 </div>
                 <p class='cliente' >
-                    <input type="text">
+                    <input type="text" class='fundo' placeholder="digite a placa">
                 </p>
                 <div class="max-width">
                     <button onclick="start3();" class="br-green">Iniciar</button>
